--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div>
+  <h2>Wlecome to the Hotel Reservation Portal!</h2>
+  <button [routerLink]="['/new']">Create new reservations</button>
+  <button [routerLink]="['/list']">View all reservations</button>
+</div>
