--- a/src/app/reservation-list/reservation-list.component.html
+++ b/src/app/reservation-list/reservation-list.component.html
@@ -7,7 +7,8 @@
     Room: {{ reservation.roomNumber }}<br />
     Check-In: {{ reservation.checkInDate }}<br />
     Check-Out: {{ reservation.checkOutDate }}<br />
-    <button (click)="deleteReservation(reservation.id)"></button>
+    <button (click)="deleteReservation(reservation.id)">Delete</button>
+    <button [routerLink]="['/edit', reservation.id]">Edit</button>
   </li>
 </ul>
 
